--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Helvetica;
 }
 header,
 footer {
@@ -31,6 +32,7 @@ p {
   .card {
     width: 80%;
     margin: 40px auto;
+    padding: 20px;
     border: 5px double #538083;
     box-shadow: 5px 10px 5px #c3acce;
   }
